<resources>
    <string name="app_name">Android-Mid-Homework-13-Part-2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="create_new_dish">Create New Dish</string>
    <string name="rate">Rate:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="create">Create</string>
    <string name="basket">Basket</string>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>